# beyond-the-hype

./: .gitignore  .pre-commit-config.yaml  README.md  hello.py  pyproject.toml
data/: eval_questions.csv  eval_questions_answered.xlsx  eval_questions_with_critiques.xlsx
notebooks/: 00-dataset-builder.ipynb  00-datasets-builder.ipynb  00-datasets_builder.ipynb  01-first-rag.ipynb  02-domain-expert.ipynb  02-llm-as-a-judge.ipynb  03-improve-metadata-search.ipynb  03-llm-as-a-judge.ipynb  04-HyDE.ipynb  05-improve-metadata-search.ipynb  datasets_builder.ipynb  domain-expert.ipynb  eval.csv  eval_comments.csv  eval_replies.csv  first-rag.ipynb  llm-as-a-judge.ipynb
src/ace_of_splades/: data.py  judge.py  utils.py
src/beyond_the_hype/: __init__.py  data.py  synthetic.py
