[project]
name = "ace"
version = "0.1.0"
description = "Become the Ace of SPLADEs"
readme = "README.md"
authors = [
    { name = "Luca Baggi", email = "luca.baggi@xtreamers.io" },
    { name = "Fabio Lipreri", email = "fabio.lipreri@xtreamers.io" }
]
requires-python = ">=3.11"

dependencies = [
    "fastexcel>=0.12.1",
    "fastparquet>=2024.11.0",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.4",
    "lancedb>=0.18.0",
    "openai>=1.59.7",
    "polars>=1.19.0",
    "pyarrow>=18.1.0",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=3.3.1",
    "xlsxwriter>=3.2.1",
]

[dependency-groups]
dev = [
    "pre-commit-uv>=4.1.4",
]

[tool.ruff.lint]
extend-select = ["ALL"]
extend-ignore = [
  "PD",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
exclude = [
  ".venv"
]
venvPath = "."
venv = ".venv"
reportUnusedCallResult = false
reportUnknownMemberType = false

[build-system]
requires = [ "setuptools >= 40.9.0" ]
build-backend = "setuptools.build_meta"
