[project]
name = "beyond-the-hype"
version = "0.1.0"
description = "Build and Evaluat Robust RAG Systems"
readme = "README.md"
authors = [
    { name = "Luca Baggi", email = "luca.baggi@xtreamers.io" },
    { name = "Fabio Lipreri", email = "fabio.lipreri@xtreamers.io" }
]
requires-python = ">=3.11"

dependencies = [
    "lancedb>=0.18.0",
    "openai>=1.59.7",
    "polars>=1.19.0",
    "pyarrow>=18.1.0",
    "sentence-transformers>=3.3.1",
]

[dependency-groups]
dev = [
    "pre-commit-uv>=4.1.4",
    "jupyterlab>=4.3.4",
    "ipywidgets>=8.1.5",
]

[tool.ruff.lint]
extend-select = ["ALL"]
extend-ignore = [
  "PD",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
exclude = [
  ".venv"
]
venvPath = "."
venv = ".venv"
reportUnusedCallResult = false
reportUnknownMemberType = false

[build-system]
requires = [ "setuptools >= 40.9.0" ]
build-backend = "setuptools.build_meta"
